overflow bug fixed

--- a/style.css
+++ b/style.css
@@ -61,7 +61,6 @@ body {
   /* font-size: 2.2rem; */
   font-size: 11vw;
   font-weight: 590;
-  background-color: coral;
 }
 
 .subheading {
